try to fix image rescaling on mobile again pt 5

--- a/assets/main.css
+++ b/assets/main.css
@@ -48,6 +48,8 @@ img {
   vertical-align: middle; }
 
 .content {
+  margin-left: auto;
+  margin-right: auto;
   width:450px;
   max-height:400px;
   width: 100%;
